tests/baselines/reference/genericTypeAssertions6.errors.txt
tests/cases/compiler/genericTypeAssertions6.ts(8,13): error TS2323: Type 'U' is not comparable to type 'T'.
tests/cases/compiler/genericTypeAssertions6.ts(9,13): error TS2323: Type 'T' is not comparable to type 'U'.
tests/cases/compiler/genericTypeAssertions6.ts(19,17): error TS2323: Type 'U' is not comparable to type 'T'.
  Type 'Date' is not comparable to type 'T'.


==== tests/cases/compiler/genericTypeAssertions6.ts (3 errors) ====
    class A<T,U> {
        constructor(x) {
            var y = <T>x;
            var z = <U>x;
        }
    
        f(x: T, y: U) {
            x = <T>y;
                ~~~~
!!! error TS2323: Type 'U' is not comparable to type 'T'.
            y = <U>x;
                ~~~~
!!! error TS2323: Type 'T' is not comparable to type 'U'.
        }
    }
    
    class B<T extends Date, U extends Date> extends A<T, U> {
        g(x: T) {
            var a: Date = x;
            var b = <Date>x;
            var c = <T>new Date();
            var d = <U>new Date();
            var e = <T><U>new Date();
                    ~~~~~~~~~~~~~~~~
!!! error TS2323: Type 'U' is not comparable to type 'T'.
!!! error TS2323:   Type 'Date' is not comparable to type 'T'.
        }
    }
    
    var b: B<Date, Date>;
    var c: A<Date, Date> = <A<Date, Date>>b;